--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,3 +52,7 @@
       publishWebProjects: false
       arguments: '--no-build --configuration Release --output $(Build.ArtifactStagingDirectory)/Release'
       zipAfterPublish: true
+  
+  - task: PublishPipelineArtifact@1
+    displayName: 'Publish Artifact: drop'
+    condition: succeeded()
